# django-celery

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  setup.cfg
compose/local/django/: Dockerfile
compose/local/django/celery/beat/: start.sh
django_celery_example/: asgi.py  celery.py  settings.py  urls.py
polls/: consumers.py  tasks.py  urls.py  views.py
polls/management/commands/: celery_worker.py
polls/templates/: form.html  form_ws.html
