[tool.poetry]
name = "django-celery"
version = "0.1.0"
description = ""
authors = ["aevtikheev <eft000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.7"
redis = "^3.5.3"
celery = "4.4.7"
flower = "0.9.7"
psycopg2-binary = "2.8.6"
requests = "^2.25.1"
channels = "^3.0.3"
channels-redis = "^3.2.0"
django-celery-beat = "^2.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
flake8 = "^3.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
